--- a/share/locale/it.json
+++ b/share/locale/it.json
@@ -1,7 +1,7 @@
 {
     "preparing_files": "Preparazione dei files da condividere.",
     "give_this_url": "Dai questo URL alla persona a cui vuoi inviare il file:",
-    "ctrlc_to_stop":  "Premi Ctrl-C per fermare il server",
+    "ctrlc_to_stop": "Premi Ctrl-C per fermare il server",
     "not_a_file": "{0:s} non è un file.",
     "other_page_loaded": "URL caricato",
     "closing_automatically": "Chiusura automatica dopo aver finito il download",
@@ -16,10 +16,72 @@
     "gui_choose_items": "Scegli",
     "gui_share_start_server": "Inizia la condivisione",
     "gui_share_stop_server": "Ferma la condivisione",
-    "gui_copy_url": "Copia lo URL",
-    "gui_downloads": "Downloads:",
+    "gui_copy_url": "Copia l' URL",
+    "gui_downloads": "Cronologia Dei Download",
     "gui_canceled": "Cancellati",
     "gui_copied_url": "URL Copiato nella clipboard",
     "gui_please_wait": "Attendere prego...",
-    "zip_progress_bar_format": "Elaborazione files: %p%"
+    "zip_progress_bar_format": "Elaborazione files: %p%",
+    "config_onion_service": "Preparando il servizio onion sulla porta {0,d}.",
+    "give_this_url_stealth": "Dai questa URL e la linea di HidServAuth al recipiente:",
+    "give_this_url_receive": "Dai questo indirizzo al mittente:",
+    "give_this_url_receive_stealth": "Condividi questo indirizzo e la linea HideServAuth:",
+    "not_a_readable_file": "{0:s} non e' un file leggibile.",
+    "no_available_port": "Non trovo nessuna porta disponibile per far partire un onion service",
+    "close_on_timeout": "tempo scaduto, chiudo",
+    "timeout_download_still_running": "download in corso, attendere",
+    "systray_menu_exit": "Fine",
+    "systray_download_started_title": "Inizio il Download con OnionShare",
+    "systray_download_started_message": "Una persona ha iniziato il download dei tuoi file",
+    "systray_download_completed_title": "Download completato",
+    "systray_download_completed_message": "il download dei tuoi file è stato completato",
+    "systray_download_canceled_title": "Download cancellato",
+    "systray_download_canceled_message": "la persona ha interrotto il download",
+    "systray_upload_started_title": "Iniziando upload",
+    "systray_upload_started_message": "Iniziando upload di file sul tuo computer",
+    "help_shutdown_timeout": "Termina la condivisione dopo alcuni secondi",
+    "help_stealth": "Richiedi autorizzazione (avanzato)",
+    "help_config": "Specifica il path del file JSON personalizzato",
+    "gui_share_stop_server_shutdown_timeout": "Ferma la condivisione ({}s rimanenti)",
+    "gui_share_stop_server_shutdown_timeout_tooltip": "timer termina in {}",
+    "gui_receive_start_server": "Inizia modalitá ricezione",
+    "gui_receive_stop_server": "Termina modalitá ricezione",
+    "gui_receive_stop_server_shutdown_timeout": "Interrompi modalitá ricezione ({}s rimanenti)",
+    "gui_receive_stop_server_shutdown_timeout_tooltip": "timer termina in {}",
+    "gui_copy_hidservauth": "Copia URL segreto",
+    "gui_no_downloads": "ancora niente",
+    "gui_copied_url_title": "Indirizzo OnionShare copiato",
+    "gui_copied_hidservauth_title": "URL segreto copiato",
+    "gui_copied_hidservauth": "URL segreto copiato",
+    "gui_download_upload_progress_complete": "%p%, {0:s} mancanti.",
+    "gui_download_upload_progress_starting": "{0:s}, %p% (calcolando)",
+    "gui_download_upload_progress_eta": "{0:s}, Terminando  in: {1:s}, %p%",
+    "version_string": "OnionShare {0:s} | https://onionshare.org",
+    "gui_quit_title": "Non cosí in fretta",
+    "gui_share_quit_warning": "Stai per inviare dai file. Sei sicuro di voler uscire da OnionShare?",
+    "gui_receive_quit_warning": "Stai ricevendo file,  vuoi davvero terminare e chiudere  OnionShare?",
+    "gui_quit_warning_quit": "Esci",
+    "gui_quit_warning_dont_quit": "Cancella",
+    "error_rate_limit": "Qualcosa ha fatto troppi tentativi a questo indirizzo, questo potrebbe esporre la sicurezza dell'indirizzo, quindi  OnionShare ha deciso di interrompere il server. Prova a condividere di nuovo e invia al tuo contatto il nuovo URL che verrá generato.",
+    "error_stealth_not_supported": "Per usare l'opzione \"client auth\" hai bisogno almeno di Tor 0.2.9.1-alpha (o Tor Browser 6.5) con python3-stem 1.5.0.",
+    "error_ephemeral_not_supported": "OnionShare richiede almeno Tor 0.2.7.1 e python3-stem 1.4.0.",
+    "gui_settings_window_title": "Preferenze",
+    "gui_settings_whats_this": "<a href='{0:s}'>Cos'e' questo?</a>",
+    "help_receive": "Ricevi condivisioni invece di inviarle",
+    "gui_settings_stealth_option": "Usa l'autorizzazione client (legacy)",
+    "gui_settings_stealth_hidservauth_string": "Dopo aver salvato la tua chiave privata per il riutilizzo, significa che ora puoi\nclicca per copiare il tuo HidServAuth.",
+    "gui_settings_autoupdate_label": "controlla la nuova versione",
+    "gui_settings_autoupdate_option": "Notificami quando una nuova versione è disponibile",
+    "gui_settings_autoupdate_timestamp": "ultimo controllo",
+    "gui_settings_autoupdate_timestamp_never": "Mai",
+    "gui_settings_autoupdate_check_button": "Controlla per una nuova nuova versione",
+    "gui_settings_general_label": "Impostazioni generali",
+    "gui_settings_sharing_label": "Impostazione Condivise",
+    "gui_settings_close_after_first_download_option": "Ferma la condivisione dopo il primo download",
+    "gui_settings_connection_type_label": "Come OnionShare si connette a tor?",
+    "gui_settings_connection_type_bundled_option": "Usa la versione Tor integrata in OnionShare",
+    "gui_settings_connection_type_automatic_option": "Tentativo di auto-configurazione con Tor Browser",
+    "gui_settings_language_label": "Lingua preferita",
+    "gui_settings_language_changed_notice": "Riavvia OnionShare affinché il cambiamento della tua lingua abbia effetto.",
+    "gui_settings_tor_bridges_custom_radio_option": "Utilizzare ponti personalizzati"
 }
