--- a/share/locale/ru.json
+++ b/share/locale/ru.json
@@ -1,8 +1,185 @@
 {
-    "give_this_url": "Отправьте эту ссылку тому человеку, которому вы хотите передать файл:",
-    "ctrlc_to_stop":  "Нажмите Ctrl-C чтобы остановить сервер",
-    "not_a_file": "{0:s} не является файлом.",
-    "gui_copied_url": "Ссылка скопирована в буфер обмена",
-    "other_page_loaded": "Другая страница была загружена",
-    "gui_copy_url": "Скопировать ссылку"
+    "give_this_url": "Передайте этот адрес получателю:",
+    "ctrlc_to_stop": "Нажмите Ctrl+C, чтобы остановить сервер",
+    "not_a_file": "{0:s} недопустимый файл.",
+    "gui_copied_url": "Ссылка OnionShare скопирована в буфер обмена",
+    "other_page_loaded": "Адрес загружен",
+    "gui_copy_url": "Скопировать ссылку",
+    "systray_menu_exit": "Выйти",
+    "gui_add": "Добавить",
+    "gui_delete": "Удалить",
+    "gui_choose_items": "Выбрать",
+    "gui_canceled": "Отменена",
+    "gui_quit_warning_quit": "Выйти",
+    "gui_quit_warning_dont_quit": "Отмена",
+    "gui_settings_window_title": "Настройки",
+    "gui_settings_autoupdate_timestamp_never": "Никогда",
+    "gui_settings_general_label": "Общие настройки",
+    "gui_settings_control_port_label": "Контрольный порт",
+    "gui_settings_authenticate_password_option": "Пароль",
+    "gui_settings_password_label": "Пароль",
+    "gui_settings_button_save": "Сохранить",
+    "gui_settings_button_cancel": "Отмена",
+    "gui_settings_button_help": "Помощь",
+    "gui_tor_connection_ask_open_settings": "Есть",
+    "gui_tor_connection_ask_quit": "Выйти",
+    "gui_status_indicator_share_started": "Идёт раздача",
+    "gui_status_indicator_receive_started": "Идёт получение",
+    "gui_settings_downloads_label": "Сохранять файлы в",
+    "gui_settings_downloads_button": "Выбрать",
+    "gui_clear_history": "Очистить Все",
+    "gui_settings_language_label": "Предпочтительный язык",
+    "config_onion_service": "Назначем \"луковому\" сервису порт {:d}.",
+    "preparing_files": "Сжимаем файлы.",
+    "give_this_url_stealth": "Передайте этот адрес и строку HidServAuth получателю:",
+    "give_this_url_receive": "Передайте этот адрес отправителю:",
+    "give_this_url_receive_stealth": "Передайте этот адрес и строку HidServAuth отправителю:",
+    "not_a_readable_file": "{0:s} не читаемый файл.",
+    "no_available_port": "Не удалось найти доступный порт для запуска \"лукового\" сервиса",
+    "close_on_timeout": "Время ожидания таймера истекло, сервис остановлен",
+    "closing_automatically": "Загрузка завершена, сервис остановлен",
+    "timeout_download_still_running": "Ожидаем завершения загрузки",
+    "timeout_upload_still_running": "Ожидаем завершения выгрузки",
+    "large_filesize": "Внимание: Отправка раздачи большого объёма может занять продолжительное время (часы)",
+    "systray_download_started_title": "OnionShare: Загрузка Началась",
+    "systray_download_started_message": "Пользователь начал загружать ваши файлы",
+    "systray_download_completed_title": "OnionShare: Загрузка Завершена",
+    "systray_download_completed_message": "Пользователь завершил загрузку ваших файлов",
+    "systray_download_canceled_title": "OnionShare: Загрузка Отменена",
+    "systray_download_canceled_message": "Пользователь отменил загрузку",
+    "systray_upload_started_title": "OnionShare: Выгрузка Началась",
+    "systray_upload_started_message": "Пользователь начал выгрузку файлов на ваш компьютер",
+    "help_local_only": "Не использовать Tor (только для разработки)",
+    "help_stay_open": "Продолжить раздачу после первой загрузки",
+    "help_shutdown_timeout": "Остановить раздачу после заданного количества секунд",
+    "help_stealth": "Использовать авторизацию клиента (дополнительно)",
+    "help_receive": "Получать раздачи, вместо их отправки",
+    "help_debug": "Направлять сообщения об ошибках OnionShare в stdout, ошибки сети сохранять на диск",
+    "help_filename": "Список файлов или папок для раздачи",
+    "help_config": "Расположение пользовательского конфигурационного JSON-файла (необязательно)",
+    "gui_drag_and_drop": "Перетащите сюда файлы и папки\nчтобы начать раздачу",
+    "gui_share_start_server": "Начать раздачу",
+    "gui_share_stop_server": "Закончить раздачу",
+    "gui_share_stop_server_shutdown_timeout": "Остановить раздачу ({}s осталось)",
+    "gui_share_stop_server_shutdown_timeout_tooltip": "Время таймера истекает в {}",
+    "gui_receive_start_server": "Включить Режим Получения",
+    "gui_receive_stop_server": "Выключить Режим Получения",
+    "gui_receive_stop_server_shutdown_timeout": "Выключить Режим Получения ({}s осталось)",
+    "gui_receive_stop_server_shutdown_timeout_tooltip": "Время таймера истекает в {}",
+    "gui_copy_hidservauth": "Скопировать строку HidServAuth",
+    "gui_downloads": "История Загрузок",
+    "gui_no_downloads": "Пока нет загрузок",
+    "gui_copied_url_title": "Адрес OnionShare скопирован",
+    "gui_copied_hidservauth_title": "Строка HidServAuth скопирована",
+    "gui_copied_hidservauth": "Строка HidServAuth скопирована в буфер обмена",
+    "gui_please_wait": "Начинаем... нажмите, чтобы отменить.",
+    "gui_download_upload_progress_complete": "%p%, прошло {0:s}.",
+    "gui_download_upload_progress_starting": "{0:s}, %p% (вычисляем)",
+    "gui_download_upload_progress_eta": "{0:s}, ETA: {1:s}, %p%",
+    "version_string": "OnionShare {0:s} | https://onionshare.org/",
+    "gui_quit_title": "Не так быстро",
+    "gui_share_quit_warning": "Идёт процесс отправки файлов. Вы уверены, что хотите завершить работу OnionShare?",
+    "gui_receive_quit_warning": "Идёт процесс получения файлов. Вы уверены, что хотите завершить работу OnionShare?",
+    "error_rate_limit": "Кто-то совершил слишком много неверных попыток подключения к вашему адресу, это может означать, что его пытаются вычислить. OnionShare остановил сервер. Создайте раздачу повторно и перешлите получателю новый адрес.",
+    "zip_progress_bar_format": "Сжатие: %p%",
+    "error_stealth_not_supported": "Для использования авторизации клиента необходимы как минимум версии Tor 0.2.9.1-alpha (или Tor Browser 6.5) и библиотеки python3-stem 1.5.0.",
+    "error_ephemeral_not_supported": "Для работы OnionShare необходимы как минимум версии Tor 0.2.7.1 и библиотеки python3-stem 1.4.0.",
+    "gui_settings_whats_this": "<a href='{0:s}'>Что это?</a>",
+    "gui_settings_stealth_option": "Использовать авторизацию клиента (устарело)",
+    "gui_settings_stealth_hidservauth_string": "Сохранили ваш приватный ключ для повторного использования,\nзначит теперь вы можете нажать сюда, чтобы скопировать вашу строку HidServAuth.",
+    "gui_settings_autoupdate_label": "Проверить новую версию",
+    "gui_settings_autoupdate_option": "Уведомить меня, когда будет доступна новая версия",
+    "gui_settings_autoupdate_timestamp": "Последняя проверка: {}",
+    "gui_settings_autoupdate_check_button": "Проверить Новую Версию",
+    "gui_settings_sharing_label": "Настройки раздачи",
+    "gui_settings_close_after_first_download_option": "Остановить раздачу после первой загрузки",
+    "gui_settings_connection_type_label": "Как OnionShare следует подключиться к сети Tor?",
+    "gui_settings_connection_type_bundled_option": "Использовать версию Tor, встроенную в OnionShare",
+    "gui_settings_connection_type_automatic_option": "Попробовать автоматическую настройку с Tor Browser",
+    "gui_settings_connection_type_control_port_option": "Подключиться используя порт управления",
+    "gui_settings_connection_type_socket_file_option": "Подключиться используя файл-сокет",
+    "gui_settings_connection_type_test_button": "Проверить подключение к сети Tor",
+    "gui_settings_socket_file_label": "Файл-сокет",
+    "gui_settings_socks_label": "Порт SOCKS",
+    "gui_settings_authenticate_label": "Настройки аутентификации Tor",
+    "gui_settings_authenticate_no_auth_option": "Без аутентификации или cookie-аутентификации",
+    "gui_settings_tor_bridges": "Поддержка \"мостов\" Tor",
+    "gui_settings_tor_bridges_no_bridges_radio_option": "Не использовать \"мосты\"",
+    "gui_settings_tor_bridges_obfs4_radio_option": "Использовать встроенные obfs4 подключаемые транспорты",
+    "gui_settings_tor_bridges_obfs4_radio_option_no_obfs4proxy": "Использовать встроенные obfs4 подключаемые транспорты (необходим obfs4proxy)",
+    "gui_settings_tor_bridges_meek_lite_azure_radio_option": "Использовать встроенные meek_lite (Azure) встроенные транспорты",
+    "gui_settings_tor_bridges_meek_lite_azure_radio_option_no_obfs4proxy": "Использовать встроенные meek_lite (Azure) встроенные транспорты (необходим obfs4proxy)",
+    "gui_settings_meek_lite_expensive_warning": "Внимание: использование \"мостов\" meek_lite очень затратно для Tor Project<br><br>Используйте их только если Вы не можете поделючться к сети Tor напрямую, через obfs4 транспорты или другие обычные \"мосты\".",
+    "gui_settings_tor_bridges_custom_radio_option": "Использовать пользовательские \"мосты\"",
+    "gui_settings_tor_bridges_custom_label": "Получить настройки \"мостов\" можно здесь <a href=\"https://bridges.torproject.org/options\">https://bridges.torproject.org</a>",
+    "gui_settings_tor_bridges_invalid": "Ни один из добавленных вами \"мостов\" не работет.\nПроверьте их снова или добавьте другие.",
+    "gui_settings_shutdown_timeout_checkbox": "Использовать таймер",
+    "gui_settings_shutdown_timeout": "Остановить раздачу в:",
+    "settings_error_unknown": "Невозможно подключить к контроллеру Tor, поскольку ваши настройки не корректны.",
+    "settings_error_automatic": "Невозможно подключться к контроллеру Tor. Уточните, Tor Browser (можно загрузить по ссылке torproject.org) запущен в фоновом режиме?",
+    "settings_error_socket_port": "Невозможно подключиться к контроллеру Tor в {}:{}.",
+    "settings_error_socket_file": "Невозможно подключиться к контроллеру Tor используя файл-сокет {}.",
+    "settings_error_auth": "Произведено подлючение к {}:{}, не получается проверить подлинность. Возможно, это не контроллер сети Tor?",
+    "settings_error_missing_password": "Произведено подключение к контроллеру Tor, но для аутентификации необходим пароль.",
+    "settings_error_unreadable_cookie_file": "Произведено подключение к контроллеру Tor, но пароль может быть указан неверно или пользователю не разрешено чтение файла-cookie.",
+    "settings_error_bundled_tor_not_supported": "Версию Tor, которая поставляется вместе с OnionShare нельзя использовать в режиме разработки на операционных системах Windows или macOS.",
+    "settings_error_bundled_tor_timeout": "Подключение к сети Tor занимает слишком много времени. Возможно, отсутствует подключение к сети Интернет или у вас неточно настроено системное время?",
+    "settings_error_bundled_tor_broken": "OnionShare не смог подулючиться к сети Tor в фоновом режиме:\n{}",
+    "settings_test_success": "Произведено подключение к контроллеру Tor.\n\nВерсия Tor: {}\nПоддержка временных \"луковых\" сервисов: {}.\nПоддержка аутентификации клиента: {}.\nПоддержка адресов .onion следующего поколения: {}.",
+    "error_tor_protocol_error": "Произошла ошибка с сетью Tor: {}",
+    "error_tor_protocol_error_unknown": "Произошла неизвестная ошибка с сетю Tor",
+    "error_invalid_private_key": "Данный тип приватного ключа не поддерживается",
+    "connecting_to_tor": "Подключаемся к сети Tor",
+    "update_available": "Вышла новая версия OnionShare. <a href='{}'>Нажмите сюда</a> чтобы загрузить.<br><br>Вы используется версию {}, наиболее поздняя версия {}.",
+    "update_error_check_error": "Не удалось проверить новые версии: сайт OnionShare сообщает, что не удалось распознать наиболее позднюю версию  '{}'…",
+    "update_error_invalid_latest_version": "Не удалось проверить наличие новой версии: возможно вы не подключены к сети Tor или сайт OnionShare не работает?",
+    "update_not_available": "Вы используете наиболее позднюю версию OnionShare.",
+    "gui_tor_connection_ask": "Открыть раздел \"настройки\" для решения проблем с подключением к сети Tor?",
+    "gui_tor_connection_error_settings": "Попробуйте изменить способ, при помощий которого OnionShare подключается к сети Tor в разделе \"Настройки\".",
+    "gui_tor_connection_canceled": "Не удалось подключиться к сети Tor.\n\nПожалуйста, убедитесь что есть подключение к сети Интернет, затем переоткройте OnionShare и настройте подключение к сети Tor.",
+    "gui_tor_connection_lost": "Произведено отключение от сети Tor.",
+    "gui_server_started_after_timeout": "Время таймера истекло до того, как сервер был запущен.\nПожалуйста, создайте новую раздачу.",
+    "gui_server_timeout_expired": "Время таймера истекло.\nПожалуйста, обновите его для того, чтобы начать раздачу.",
+    "share_via_onionshare": "OnionShare это",
+    "gui_use_legacy_v2_onions_checkbox": "Используйте устаревшие адреса",
+    "gui_save_private_key_checkbox": "Используйте постоянный адрес (устарело)",
+    "gui_share_url_description": "<b>Кто угодно</b> c этим адресом OnionShare может <b>загрузить</b> ваши файлы при помощи<b>Tor Browser</b>: <img src='{}' />",
+    "gui_receive_url_description": "<b>Кто угодно</b> c этим адресом OnionShare может <b>выгрузить</b> файлы на ваш комьютер <b>Tor Browser</b>: <img src='{}' />",
+    "gui_url_label_persistent": "Данная раздаче не будет завершена автоматически.<br><br>Каждая последующая раздача будет повторно использовать данный адрес. (Чтобы использовать одноразовый адрес, отключите опцию \"Использовать устаревший адрес\" в настройках.)",
+    "gui_url_label_stay_open": "Данная раздача не будет остановлена автоматически.",
+    "gui_url_label_onetime": "Данная раздача будет завершена автоматически после первой загрузки.",
+    "gui_url_label_onetime_and_persistent": "Данная раздача не будет завершена автоматически.<br><br>Каждая последующая раздача будет повторно использовать данный адрес. (Чтобы использовать одноразовый адрес, отключите опцию \"Использовать устаревший адрес\" в настройках.)",
+    "gui_status_indicator_share_stopped": "Можно начинать раздачу",
+    "gui_status_indicator_share_working": "Начинаем…",
+    "gui_status_indicator_receive_stopped": "Можно начинать получение",
+    "gui_status_indicator_receive_working": "Начинаем…",
+    "gui_file_info": "{} файлы, {}",
+    "gui_file_info_single": "{} файл, {}",
+    "history_in_progress_tooltip": "{} в ходе выполнения",
+    "history_completed_tooltip": "{} завершено",
+    "info_in_progress_uploads_tooltip": "{} выгрузка(и) в ходе выполнения",
+    "info_completed_uploads_tooltip": "{} выгрузка(и) завершена(ы)",
+    "error_cannot_create_downloads_dir": "Не удалось создать папку в режиме получения: {}",
+    "receive_mode_downloads_dir": "Файлы, которые были вам отправлены находятся в папке: {}",
+    "receive_mode_warning": "Внимание: Режим получения позаоляет другия людями загружать файлы на ваш компьютер. Некоторые файлы могут получить управление вашим компьютером, если вы откроете их. Открывайте только те файлы, которые вы получили от людей, которым вы доверяете, или если вы знаете, что делаете.",
+    "gui_receive_mode_warning": "Режим получения позаоляет другия людями загружать файлы на ваш компьютер. <br><br><b>Некоторые файлы могут получить управление вашим компьютером, если вы откроете их. Открывайте только те файлы, которые вы получили от людей, которым вы доверяете, или если вы знаете, что делаете.</b>",
+    "receive_mode_upload_starting": "Начинается выгрузка общим объёмом {}",
+    "receive_mode_received_file": "Получено: {}",
+    "gui_mode_share_button": "Раздача файлов",
+    "gui_mode_receive_button": "Получение файлов",
+    "gui_settings_receiving_label": "Настройки получения",
+    "gui_settings_public_mode_checkbox": "Публичный режим",
+    "systray_close_server_title": "Сервер OnionShare Отключен",
+    "systray_close_server_message": "Пользователь отключил сервер",
+    "systray_page_loaded_title": "Страница OnionShare Загружена",
+    "systray_download_page_loaded_message": "Пользователь находится на странице загрузки",
+    "systray_upload_page_loaded_message": "Пользователь посетил странцу выгрузки",
+    "gui_uploads": "История Выгрузок",
+    "gui_no_uploads": "Пока Нет Выгрузок",
+    "gui_upload_in_progress": "Выгрузка Началась {}",
+    "gui_upload_finished_range": "Загружено {} в {}",
+    "gui_upload_finished": "Выгружено {}",
+    "gui_download_in_progress": "Загрузка Началась {}",
+    "gui_open_folder_error_nautilus": "Не удаётся открыть папку, поскольку nautilus не доступен. Файл находится здесь: {}",
+    "gui_settings_language_changed_notice": "Перезапустите OnionShare чтобы применились языковые настройки."
 }
