--- a/share/locale/ar.json
+++ b/share/locale/ar.json
@@ -1,28 +1,28 @@
 {
-    "config_onion_service": "",
-    "preparing_files": "",
-    "give_this_url": "Passe este URL para a pessoa que deve receber o arquivo:",
+    "config_onion_service": "تثبيت خدمة onion على المنفذ {0:d}.",
+    "preparing_files": "ضغط الملفات",
+    "give_this_url": "أعط هذا العنوان للمستقبل",
     "give_this_url_stealth": "",
     "give_this_url_receive": "",
     "give_this_url_receive_stealth": "",
-    "ctrlc_to_stop": "Pressione Ctrl-C para parar o servidor",
-    "not_a_file": "{0:s} não é um arquivo.",
+    "ctrlc_to_stop": "",
+    "not_a_file": "",
     "not_a_readable_file": "",
     "no_available_port": "",
-    "other_page_loaded": "Outra página tem sido carregada",
+    "other_page_loaded": "",
     "close_on_timeout": "",
     "closing_automatically": "",
     "timeout_download_still_running": "",
     "large_filesize": "",
-    "systray_menu_exit": "Sair",
+    "systray_menu_exit": "خروج",
     "systray_download_started_title": "",
     "systray_download_started_message": "",
     "systray_download_completed_title": "",
     "systray_download_completed_message": "",
     "systray_download_canceled_title": "",
-    "systray_download_canceled_message": "",
-    "systray_upload_started_title": "",
-    "systray_upload_started_message": "",
+    "systray_download_canceled_message": "المستخدم الغاء التحميل",
+    "systray_upload_started_title": "onionshare تحميل بدأت",
+    "systray_upload_started_message": "بدأ المستخدم تحميل الملفات إلى جهاز الكمبيوتر الخاص بك",
     "help_local_only": "",
     "help_stay_open": "",
     "help_shutdown_timeout": "",
@@ -32,9 +32,9 @@
     "help_filename": "",
     "help_config": "",
     "gui_drag_and_drop": "",
-    "gui_add": "",
-    "gui_delete": "Eliminar",
-    "gui_choose_items": "Escolha",
+    "gui_add": "إضافة",
+    "gui_delete": "حذف",
+    "gui_choose_items": "إختر",
     "gui_share_start_server": "",
     "gui_share_stop_server": "",
     "gui_share_stop_server_shutdown_timeout": "",
@@ -47,9 +47,9 @@
     "gui_copy_hidservauth": "",
     "gui_downloads": "",
     "gui_no_downloads": "",
-    "gui_canceled": "Cancelada",
+    "gui_canceled": "ألغى",
     "gui_copied_url_title": "",
-    "gui_copied_url": "URL foi copiado para área de transferência",
+    "gui_copied_url": "",
     "gui_copied_hidservauth_title": "",
     "gui_copied_hidservauth": "",
     "gui_please_wait": "",
@@ -60,22 +60,22 @@
     "gui_quit_title": "",
     "gui_share_quit_warning": "",
     "gui_receive_quit_warning": "",
-    "gui_quit_warning_quit": "Sair",
-    "gui_quit_warning_dont_quit": "Cancelar",
+    "gui_quit_warning_quit": "خروج",
+    "gui_quit_warning_dont_quit": "إلغاء",
     "error_rate_limit": "",
     "zip_progress_bar_format": "",
     "error_stealth_not_supported": "",
     "error_ephemeral_not_supported": "",
-    "gui_settings_window_title": "Definições",
+    "gui_settings_window_title": "الإعدادات",
     "gui_settings_whats_this": "",
     "gui_settings_stealth_option": "",
     "gui_settings_stealth_hidservauth_string": "",
-    "gui_settings_autoupdate_label": "",
+    "gui_settings_autoupdate_label": "التحقق من الإصدار الجديد",
     "gui_settings_autoupdate_option": "",
     "gui_settings_autoupdate_timestamp": "",
-    "gui_settings_autoupdate_timestamp_never": "Nunca",
+    "gui_settings_autoupdate_timestamp_never": "أبدا",
     "gui_settings_autoupdate_check_button": "",
-    "gui_settings_general_label": "Definições gerais",
+    "gui_settings_general_label": "الإعدادات العامة",
     "gui_settings_sharing_label": "",
     "gui_settings_close_after_first_download_option": "",
     "gui_settings_connection_type_label": "",
@@ -89,8 +89,8 @@
     "gui_settings_socks_label": "",
     "gui_settings_authenticate_label": "",
     "gui_settings_authenticate_no_auth_option": "",
-    "gui_settings_authenticate_password_option": "Password",
-    "gui_settings_password_label": "Password",
+    "gui_settings_authenticate_password_option": "كلمة السر",
+    "gui_settings_password_label": "كلمة السر",
     "gui_settings_tor_bridges": "",
     "gui_settings_tor_bridges_no_bridges_radio_option": "",
     "gui_settings_tor_bridges_obfs4_radio_option": "",
@@ -101,9 +101,9 @@
     "gui_settings_tor_bridges_custom_radio_option": "",
     "gui_settings_tor_bridges_custom_label": "",
     "gui_settings_tor_bridges_invalid": "",
-    "gui_settings_button_save": "",
-    "gui_settings_button_cancel": "Cancelar",
-    "gui_settings_button_help": "Ajuda",
+    "gui_settings_button_save": "حفظ",
+    "gui_settings_button_cancel": "إلغاء",
+    "gui_settings_button_help": "مساعدة",
     "gui_settings_shutdown_timeout_checkbox": "",
     "gui_settings_shutdown_timeout": "",
     "settings_error_unknown": "",
@@ -126,8 +126,8 @@
     "update_error_invalid_latest_version": "",
     "update_not_available": "",
     "gui_tor_connection_ask": "",
-    "gui_tor_connection_ask_open_settings": "Sim",
-    "gui_tor_connection_ask_quit": "Sair",
+    "gui_tor_connection_ask_open_settings": "ÙØ¹Ù,",
+    "gui_tor_connection_ask_quit": "خروج",
     "gui_tor_connection_error_settings": "",
     "gui_tor_connection_canceled": "",
     "gui_tor_connection_lost": "",
@@ -147,7 +147,7 @@
     "gui_status_indicator_share_started": "",
     "gui_status_indicator_receive_stopped": "",
     "gui_status_indicator_receive_working": "",
-    "gui_status_indicator_receive_started": "",
+    "gui_status_indicator_receive_started": "جاري الإستلام",
     "gui_file_info": "",
     "gui_file_info_single": "",
     "history_in_progress_tooltip": "",
@@ -164,7 +164,7 @@
     "gui_mode_receive_button": "",
     "gui_settings_receiving_label": "",
     "gui_settings_downloads_label": "",
-    "gui_settings_downloads_button": "Navegar",
+    "gui_settings_downloads_button": "استعراض",
     "gui_settings_receive_allow_receiver_shutdown_checkbox": "",
     "gui_settings_public_mode_checkbox": "",
     "systray_close_server_title": "",
