--- a/share/locale/sv.json
+++ b/share/locale/sv.json
@@ -1,56 +1,57 @@
 {
-    "config_onion_service": "",
-    "preparing_files": "",
-    "give_this_url": "Passe este URL para a pessoa que deve receber o arquivo:",
-    "give_this_url_stealth": "",
-    "give_this_url_receive": "",
-    "give_this_url_receive_stealth": "",
-    "ctrlc_to_stop": "Pressione Ctrl-C para parar o servidor",
-    "not_a_file": "{0:s} não é um arquivo.",
-    "not_a_readable_file": "",
-    "no_available_port": "",
-    "other_page_loaded": "Outra página tem sido carregada",
+    "config_onion_service": "Förbereder onion-tjänsten på port {0:d}.",
+    "preparing_files": "Komprimera filer.",
+    "give_this_url": "Ge den här adressen till mottagaren:",
+    "give_this_url_stealth": "Ge den här adressen och HidServAuth-raden till mottagaren:",
+    "give_this_url_receive": "Ge den här adressen till avsändaren:",
+    "give_this_url_receive_stealth": "Ge den här adressen och HidServAuth-raden till avsändaren:",
+    "ctrlc_to_stop": "Tryck ned Ctrl+C för att stoppa servern",
+    "not_a_file": "{0:s} är inte en giltig fil.",
+    "not_a_readable_file": "{0:s} är inte en läsbar fil.",
+    "no_available_port": "Kunde inte hitta en ledig kort för att starta onion-tjänsten",
+    "other_page_loaded": "Adress laddad",
     "close_on_timeout": "",
-    "closing_automatically": "",
-    "timeout_download_still_running": "",
-    "large_filesize": "",
-    "systray_menu_exit": "Sair",
-    "systray_download_started_title": "",
-    "systray_download_started_message": "",
-    "systray_download_completed_title": "",
-    "systray_download_completed_message": "",
-    "systray_download_canceled_title": "",
-    "systray_download_canceled_message": "",
-    "systray_upload_started_title": "",
-    "systray_upload_started_message": "",
-    "help_local_only": "",
-    "help_stay_open": "",
-    "help_shutdown_timeout": "",
-    "help_stealth": "",
-    "help_receive": "",
-    "help_debug": "",
-    "help_filename": "",
-    "help_config": "",
-    "gui_drag_and_drop": "",
-    "gui_add": "",
-    "gui_delete": "Eliminar",
-    "gui_choose_items": "Escolha",
-    "gui_share_start_server": "",
-    "gui_share_stop_server": "",
-    "gui_share_stop_server_shutdown_timeout": "",
+    "closing_automatically": "Stannade för att nedladdningen blev klar",
+    "timeout_download_still_running": "Väntar på att nedladdningen ska bli klar",
+    "timeout_upload_still_running": "Väntar på att uppladdningen ska bli klar",
+    "large_filesize": "Varning: Att skicka en stor fil kan ta timmar",
+    "systray_menu_exit": "Avsluta",
+    "systray_download_started_title": "OnionShare Nedladdning Startad",
+    "systray_download_started_message": "En användare började ladda ner dina filer",
+    "systray_download_completed_title": "OnionShare Nedladdning Klar",
+    "systray_download_completed_message": "Användaren har laddat ner dina filer",
+    "systray_download_canceled_title": "OnionShare Nedladdning Avbruten",
+    "systray_download_canceled_message": "Användaren avbröt nedladdningen",
+    "systray_upload_started_title": "OnionShare Uppladdning Påbörjad",
+    "systray_upload_started_message": "En användare började ladda upp filer på din dator",
+    "help_local_only": "Använd inte Tor (endast för utveckling)",
+    "help_stay_open": "Fortsätt dela efter första nedladdning",
+    "help_shutdown_timeout": "Avbryt delning efter ett bestämt antal sekunder",
+    "help_stealth": "Använd klient-auktorisering (avancerat)",
+    "help_receive": "Ta emot delningar istället för att skicka dem",
+    "help_debug": "Logga OnionShare fel till stdout och webbfel till hårddisken",
+    "help_filename": "Lista filer och mappar att dela",
+    "help_config": "Egenvald sökväg för JSON konfigurationsfil (valfri)",
+    "gui_drag_and_drop": "Dra och släpp filer och mappar\nför att påbörja delning",
+    "gui_add": "Lägg till",
+    "gui_delete": "Radera",
+    "gui_choose_items": "Välj",
+    "gui_share_start_server": "Påbörja delning",
+    "gui_share_stop_server": "Avbryt delning",
+    "gui_share_stop_server_shutdown_timeout": "Avbryt Delning ({}s kvarstår)",
     "gui_share_stop_server_shutdown_timeout_tooltip": "",
-    "gui_receive_start_server": "",
-    "gui_receive_stop_server": "",
-    "gui_receive_stop_server_shutdown_timeout": "",
-    "gui_receive_stop_server_shutdown_timeout_tooltip": "",
-    "gui_copy_url": "",
-    "gui_copy_hidservauth": "",
-    "gui_downloads": "",
-    "gui_no_downloads": "",
-    "gui_canceled": "Cancelada",
-    "gui_copied_url_title": "",
-    "gui_copied_url": "URL foi copiado para área de transferência",
-    "gui_copied_hidservauth_title": "",
+    "gui_receive_start_server": "Starta Mottagarläge",
+    "gui_receive_stop_server": "Avsluta Mottagarläge",
+    "gui_receive_stop_server_shutdown_timeout": "Avsluta Mottagarläge ({}s kvarstår)",
+    "gui_receive_stop_server_shutdown_timeout_tooltip": "Auto-stop timer avslutas kl {}",
+    "gui_copy_url": "Kopiera Adress",
+    "gui_copy_hidservauth": "Kopiera HidServAuth",
+    "gui_downloads": "Nedladdningshistorik",
+    "gui_no_downloads": "Inga Nedladdningar Än",
+    "gui_canceled": "Avbruten",
+    "gui_copied_url_title": "OnionShare Adress Kopierad",
+    "gui_copied_url": "OnionShare adress kopierad till urklipp",
+    "gui_copied_hidservauth_title": "HidServAuth Kopierad",
     "gui_copied_hidservauth": "",
     "gui_please_wait": "",
     "gui_download_upload_progress_complete": "",
@@ -60,22 +61,22 @@
     "gui_quit_title": "",
     "gui_share_quit_warning": "",
     "gui_receive_quit_warning": "",
-    "gui_quit_warning_quit": "Sair",
-    "gui_quit_warning_dont_quit": "Cancelar",
+    "gui_quit_warning_quit": "",
+    "gui_quit_warning_dont_quit": "",
     "error_rate_limit": "",
     "zip_progress_bar_format": "",
     "error_stealth_not_supported": "",
     "error_ephemeral_not_supported": "",
-    "gui_settings_window_title": "Definições",
+    "gui_settings_window_title": "",
     "gui_settings_whats_this": "",
     "gui_settings_stealth_option": "",
     "gui_settings_stealth_hidservauth_string": "",
     "gui_settings_autoupdate_label": "",
     "gui_settings_autoupdate_option": "",
     "gui_settings_autoupdate_timestamp": "",
-    "gui_settings_autoupdate_timestamp_never": "Nunca",
+    "gui_settings_autoupdate_timestamp_never": "",
     "gui_settings_autoupdate_check_button": "",
-    "gui_settings_general_label": "Definições gerais",
+    "gui_settings_general_label": "",
     "gui_settings_sharing_label": "",
     "gui_settings_close_after_first_download_option": "",
     "gui_settings_connection_type_label": "",
@@ -89,8 +90,8 @@
     "gui_settings_socks_label": "",
     "gui_settings_authenticate_label": "",
     "gui_settings_authenticate_no_auth_option": "",
-    "gui_settings_authenticate_password_option": "Password",
-    "gui_settings_password_label": "Password",
+    "gui_settings_authenticate_password_option": "",
+    "gui_settings_password_label": "",
     "gui_settings_tor_bridges": "",
     "gui_settings_tor_bridges_no_bridges_radio_option": "",
     "gui_settings_tor_bridges_obfs4_radio_option": "",
@@ -102,8 +103,8 @@
     "gui_settings_tor_bridges_custom_label": "",
     "gui_settings_tor_bridges_invalid": "",
     "gui_settings_button_save": "",
-    "gui_settings_button_cancel": "Cancelar",
-    "gui_settings_button_help": "Ajuda",
+    "gui_settings_button_cancel": "",
+    "gui_settings_button_help": "",
     "gui_settings_shutdown_timeout_checkbox": "",
     "gui_settings_shutdown_timeout": "",
     "settings_error_unknown": "",
@@ -126,8 +127,8 @@
     "update_error_invalid_latest_version": "",
     "update_not_available": "",
     "gui_tor_connection_ask": "",
-    "gui_tor_connection_ask_open_settings": "Sim",
-    "gui_tor_connection_ask_quit": "Sair",
+    "gui_tor_connection_ask_open_settings": "",
+    "gui_tor_connection_ask_quit": "",
     "gui_tor_connection_error_settings": "",
     "gui_tor_connection_canceled": "",
     "gui_tor_connection_lost": "",
@@ -164,8 +165,7 @@
     "gui_mode_receive_button": "",
     "gui_settings_receiving_label": "",
     "gui_settings_downloads_label": "",
-    "gui_settings_downloads_button": "Navegar",
-    "gui_settings_receive_allow_receiver_shutdown_checkbox": "",
+    "gui_settings_downloads_button": "",
     "gui_settings_public_mode_checkbox": "",
     "systray_close_server_title": "",
     "systray_close_server_message": "",
