--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -48,8 +48,6 @@
     "gui_receive_stop_server_shutdown_timeout_tooltip": "Auto-stop timer ends at {}",
     "gui_copy_url": "Copy Address",
     "gui_copy_hidservauth": "Copy HidServAuth",
-    "gui_downloads": "Download History",
-    "gui_no_downloads": "No Downloads Yet",
     "gui_canceled": "Canceled",
     "gui_copied_url_title": "Copied OnionShare Address",
     "gui_copied_url": "OnionShare address copied to clipboard",
@@ -175,14 +173,18 @@
     "systray_page_loaded_title": "OnionShare Page Loaded",
     "systray_download_page_loaded_message": "A user loaded the download page",
     "systray_upload_page_loaded_message": "A user loaded the upload page",
-    "gui_uploads": "Upload History",
-    "gui_no_uploads": "No Uploads Yet",
-    "gui_clear_history": "Clear All",
-    "gui_upload_in_progress": "Upload Started {}",
-    "gui_upload_finished_range": "Uploaded {} to {}",
-    "gui_upload_finished": "Uploaded {}",
-    "gui_download_in_progress": "Download Started {}",
     "gui_open_folder_error_nautilus": "Cannot open folder because nautilus is not available. The file is here: {}",
     "gui_settings_language_label": "Preferred language",
-    "gui_settings_language_changed_notice": "Restart OnionShare for your change in language to take effect."
+    "gui_settings_language_changed_notice": "Restart OnionShare for your change in language to take effect.",
+
+    "gui_all_modes_history": "History",
+    "gui_all_modes_clear_history": "Clear All",
+
+    "gui_share_mode_no_files": "No Files Sent Yet",
+    "gui_share_mode_transfer_started": "Started {}",
+
+    "gui_receive_mode_no_files": "No Files Received Yet",
+    "gui_receive_mode_transfer_started": "Started {}",
+    "gui_receive_mode_transfer_finished_range": "Started {}, finished {}",
+    "gui_receive_mode_transfer_finished": "Finished {}"
 }
