Change many more strings to stop using 'download'/'upload' language

--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -11,21 +11,10 @@
     "no_available_port": "Could not find an available port to start the onion service",
     "other_page_loaded": "Address loaded",
     "close_on_timeout": "Stopped because auto-stop timer ran out",
-    "closing_automatically": "Stopped because download finished",
-    "timeout_download_still_running": "Waiting for download to complete",
-    "timeout_upload_still_running": "Waiting for upload to complete",
+    "closing_automatically": "Stopped because transfer is complete",
     "large_filesize": "Warning: Sending a large share could take hours",
-    "systray_menu_exit": "Quit",
-    "systray_download_started_title": "OnionShare Download Started",
-    "systray_download_started_message": "A user started downloading your files",
-    "systray_download_completed_title": "OnionShare Download Finished",
-    "systray_download_completed_message": "The user finished downloading your files",
-    "systray_download_canceled_title": "OnionShare Download Canceled",
-    "systray_download_canceled_message": "The user canceled the download",
-    "systray_upload_started_title": "OnionShare Upload Started",
-    "systray_upload_started_message": "A user started uploading files to your computer",
     "help_local_only": "Don't use Tor (only for development)",
-    "help_stay_open": "Keep sharing after first download",
+    "help_stay_open": "Continue sharing after files have been sent",
     "help_shutdown_timeout": "Stop sharing after a given amount of seconds",
     "help_stealth": "Use client authorization (advanced)",
     "help_receive": "Receive shares instead of sending them",
@@ -75,7 +64,7 @@
     "gui_settings_autoupdate_check_button": "Check for New Version",
     "gui_settings_general_label": "General settings",
     "gui_settings_sharing_label": "Sharing settings",
-    "gui_settings_close_after_first_download_option": "Stop sharing after first download",
+    "gui_settings_close_after_first_download_option": "Stop sharing after files have been sent",
     "gui_settings_connection_type_label": "How should OnionShare connect to Tor?",
     "gui_settings_connection_type_bundled_option": "Use the Tor version built into OnionShare",
     "gui_settings_connection_type_automatic_option": "Attempt auto-configuration with Tor Browser",
@@ -151,8 +140,6 @@
     "gui_file_info_single": "{} file, {}",
     "history_in_progress_tooltip": "{} in progress",
     "history_completed_tooltip": "{} completed",
-    "info_in_progress_uploads_tooltip": "{} upload(s) in progress",
-    "info_completed_uploads_tooltip": "{} upload(s) completed",
     "error_cannot_create_downloads_dir": "Could not create receive mode folder: {}",
     "receive_mode_downloads_dir": "Files sent to you appear in this folder: {}",
     "receive_mode_warning": "Warning: Receive mode lets people upload files to your computer. Some files can potentially take control of your computer if you open them. Only open things from people you trust, or if you know what you are doing.",
@@ -165,15 +152,20 @@
     "gui_settings_downloads_label": "Save files to",
     "gui_settings_downloads_button": "Browse",
     "gui_settings_public_mode_checkbox": "Public mode",
-    "systray_close_server_title": "OnionShare Server Closed",
-    "systray_close_server_message": "A user closed the server",
-    "systray_page_loaded_title": "OnionShare Page Loaded",
-    "systray_download_page_loaded_message": "A user loaded the download page",
-    "systray_upload_page_loaded_message": "A user loaded the upload page",
     "gui_open_folder_error_nautilus": "Cannot open folder because nautilus is not available. The file is here: {}",
     "gui_settings_language_label": "Preferred language",
     "gui_settings_language_changed_notice": "Restart OnionShare for your change in language to take effect.",
-
+    "systray_menu_exit": "Quit",
+    "systray_page_loaded_title": "Page Loaded",
+    "systray_page_loaded_message": "OnionShare address loaded",
+    "systray_share_started_title": "Sharing Started",
+    "systray_share_started_message": "Starting to send files to someone",
+    "systray_share_completed_title": "Sharing Complete",
+    "systray_share_completed_message": "Finished sending files",
+    "systray_share_canceled_title": "Sharing Canceled",
+    "systray_share_canceled_message": "Someone canceled receiving your files",
+    "systray_receive_started_title": "Receiving Started",
+    "systray_receive_started_message": "Someone is sending files to you",
     "gui_all_modes_history": "History",
     "gui_all_modes_clear_history": "Clear All",
     "gui_all_modes_transfer_started": "Started {}",
@@ -183,5 +175,7 @@
     "gui_all_modes_progress_starting": "{0:s}, %p% (calculating)",
     "gui_all_modes_progress_eta": "{0:s}, ETA: {1:s}, %p%",
     "gui_share_mode_no_files": "No Files Sent Yet",
-    "gui_receive_mode_no_files": "No Files Received Yet"
+    "gui_share_mode_timeout_waiting": "Waiting to finish sending",
+    "gui_receive_mode_no_files": "No Files Received Yet",
+    "gui_receive_mode_timeout_waiting": "Waiting to finish receiving"
 }
