--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -140,8 +140,8 @@
     "gui_file_info_single": "{} file, {}",
     "history_in_progress_tooltip": "{} in progress",
     "history_completed_tooltip": "{} completed",
-    "error_cannot_create_downloads_dir": "Could not create receive mode folder: {}",
-    "receive_mode_downloads_dir": "Files sent to you appear in this folder: {}",
+    "error_cannot_create_data_dir": "Could not create OnionShare data folder: {}",
+    "receive_mode_data_dir": "Files sent to you appear in this folder: {}",
     "receive_mode_warning": "Warning: Receive mode lets people upload files to your computer. Some files can potentially take control of your computer if you open them. Only open things from people you trust, or if you know what you are doing.",
     "gui_receive_mode_warning": "Receive mode lets people upload files to your computer.<br><br><b>Some files can potentially take control of your computer if you open them. Only open things from people you trust, or if you know what you are doing.</b>",
     "receive_mode_upload_starting": "Upload of total size {} is starting",
@@ -149,8 +149,8 @@
     "gui_mode_share_button": "Share Files",
     "gui_mode_receive_button": "Receive Files",
     "gui_settings_receiving_label": "Receiving settings",
-    "gui_settings_downloads_label": "Save files to",
-    "gui_settings_downloads_button": "Browse",
+    "gui_settings_data_dir_label": "Save files to",
+    "gui_settings_data_dir_browse_button": "Browse",
     "gui_settings_public_mode_checkbox": "Public mode",
     "gui_open_folder_error_nautilus": "Cannot open folder because nautilus is not available. The file is here: {}",
     "gui_settings_language_label": "Preferred language",
