--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -171,6 +171,8 @@
     "gui_all_modes_transfer_started": "Started {}",
     "gui_all_modes_transfer_finished_range": "Transferred {} - {}",
     "gui_all_modes_transfer_finished": "Transferred {}",
+    "gui_all_modes_transfer_canceled_range": "Canceled {} - {}",
+    "gui_all_modes_transfer_canceled": "Canceled {}",
     "gui_all_modes_progress_complete": "%p%, {0:s} elapsed.",
     "gui_all_modes_progress_starting": "{0:s}, %p% (calculating)",
     "gui_all_modes_progress_eta": "{0:s}, ETA: {1:s}, %p%",
